--- a/Daniela/html/index.html.html
+++ b/Daniela/html/index.html.html
@@ -20,9 +20,10 @@
     <img class="logo" src="../imagens/logos/logo.png" alt="Logo">
 
     
-    <p > Trabalhos realizados no primeiro semestre do curso de Design Gráfico na escola SENAI Theobaldo de Nigris</p>
+    <p >Daniela Rosa do Amaral, mais conhecido por “Dan”, nasceu em 2004 na cidade de São Paulo. É um jovem de 18 anos que recém concluiu o ensino médio e atualmente estuda no SENAI (Serviço Nacional de Aprendizagem Industrial) Theobaldo de Nigris. 
+        Sua paixão por arte se desenvolveu desde cedo, quando começou suas aulas no ensino fundamental em 2011, tendo-se inspirado pela artista modernista Tarsila do Amaral. Atualmente cursa técnico em Design Gráfico e faz licenciatura em linguagens, porém pretende seguir na área de Artes Visuais.</p>
 
-<img class="primeiro" src="../imagens/gifs/primeiro.gif" alt="primeiro">
+<img class="eu" src="../imagens/editadas/Captura de tela 2023-03-31 141243.png" alt="Eu">
         <footer class="botao">
             <h4 style="color: #180445;">email para contato: daniela.rosadroid@gmail.com</h4>
             <a href="https://www.instagram.com/starry_hideyoshi/?igshid=YmMyMTA2M2Y%3D"><img src="../imagens/logos/logo insta.png" alt="instagram" width="25px"></a> 
