--- a/Daniela/html/semestree.html
+++ b/Daniela/html/semestree.html
@@ -11,8 +11,8 @@
 <body>
 
     <nav>
-    <a class="home" href="../html/index.html">Home</a>
-    <a class="desenhos" href="../html/desenhos.html">Desenhos</a>
+    <a class="home" href="../html/index.html.html">Home</a>
+    <a class="desenhos" href="../html/sesenhos.html">Desenhos</a>
     <a class="semestre" href="../html/semestre.html">1º Semestre</a>
     <a class="semestree" href="../html/semestree.html">2º Semestre</a>
 
