--- a/Daniela/html/sesenhos.html
+++ b/Daniela/html/sesenhos.html
@@ -20,9 +20,9 @@
     <img class="logo" src="../imagens/logos/logo.png" alt="Logo">
 
     
-    <p > Trabalhos realizados no primeiro semestre do curso de Design Gráfico na escola SENAI Theobaldo de Nigris</p>
+    <p > Trabalhos realizados de forma tradicional e digital durante o período do curso de Design Gráfico na escola SENAI Theobaldo de Nigris</p>
 
-<img class="primeiro" src="../imagens/gifs/primeiro.gif" alt="primeiro">
+<img class="desenho" src="../imagens/gifs/desenhos.gif" alt="desenho">
         <footer class="botao">
             <h4 style="color: #180445;">email para contato: daniela.rosadroid@gmail.com</h4>
             <a href="https://www.instagram.com/starry_hideyoshi/?igshid=YmMyMTA2M2Y%3D"><img src="../imagens/logos/logo insta.png" alt="instagram" width="25px"></a> 
